--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ build_flags =
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D 'LV_USE_DEMO_WIDGETS=1'
 	-D 'LV_USE_LOG=1'
-	-D 'LV_USE_PERF_MONITOR=1'
+	; -D 'LV_USE_PERF_MONITOR=1'
 	-D 'LV_LOG_PRINTF=0'
 	-D 'LV_USE_PREF_POS_POSITION=6'
 	; -D 'LV_MEM_SIZE=1024 *1024'
